--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,34 +21,49 @@ body {
   margin: auto;
 }
 
-.menu {
+.main-nav {
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  align-items: center;
   background-color: #f5f8f8;
-  overflow: hidden;
+  padding: 0;
+  width: 100%;
 }
 
-.a-nav, .icon {
+.nav-list {
   display: flex;
-  transition: background-color 0.4s ease, color 0.4s ease;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-link, .nav-toggle {
+  display: flex;
   width: 7em;
   justify-content: center;
   align-items: center;
   text-decoration: none;
   color: black;
   font-size: 1.3em;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding: 1em 0;
+  transition: background-color 0.4s ease, color 0.4s ease;
 }
 
-.a-nav:hover, .icon:hover {
+.nav-toggle {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.nav-link:hover {
   background-color: #9747ff;
   color: white;
 }
 
-.icon {
-  display: none;
+.nav-toggle:hover {
+  background-color: #9747ff;
+  color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -59,6 +74,7 @@ h1, h2, h3, h4, h5, h6 {
 h1.name {
   background: linear-gradient(to right, #f82d96, #9747ff, #0075ff);
   -webkit-text-fill-color: transparent;
+  background-clip: padding-box;
   -webkit-background-clip: text;
   font-family: "Russo One", sans-serif;
   font-weight: 500;
@@ -173,6 +189,11 @@ p {
   overflow: hidden;
   box-shadow: 0 4px 12px rgba(57, 0, 130, 0.3);
   transition: box-shadow 0.5s ease;
+}
+
+hr {
+  margin: auto;
+  width: 90%;
 }
 
 .header {
@@ -301,6 +322,7 @@ p {
   font-family: monospace;
   color: transparent;
   background: linear-gradient(45deg, #ff00ff, #0000ff);
+  background-clip: padding-box;
   -webkit-background-clip: text;
 }
 
@@ -311,6 +333,7 @@ p {
   font-family: monospace;
   color: transparent;
   background: linear-gradient(45deg, #0000ff, #ff00ff);
+  background-clip: padding-box;
   -webkit-background-clip: text;
 }
 
@@ -404,35 +427,41 @@ footer a:hover {
 }
 
 @media screen and (max-width: 600px) {
-  .menu.responsive {
-    position: relative;
+  .main-nav {
     flex-direction: column;
   }
-  .menu.responsive .icon {
-    order: 1;
-    display: block;
-    text-align: center;
+
+  .nav-list {
+    display: none;
+    flex-direction: column;
     width: 100%;
   }
-  .menu.responsive .a-nav {
-    order: 2;
-    display: block;
-    text-align: center;
+
+  .nav-link {
     width: 100%;
   }
-  .a-nav {display: none;}
-  .icon {
-    display: block;
-    text-align: center;
+
+  .nav-toggle {
+    display: flex;
     width: 100%;
+    height: 3em;
+    text-align: center;
+    color: inherit;
   }
+
+  .main-nav.responsive .nav-list {
+    display: flex;
+  }
+
   .languages div {
     flex-basis: 100%;
     margin: 0.5em 0;
   }
+
   .education {
     padding: 1em;
   }
+
   p {
     font-size: 0.87em;
   }
